%% MONGODB ERD - Bless2n Food System
erDiagram
  user {
    string id PK "NOT NULL"
    string email UK "NOT NULL"
    string firstname "NULL"
    string lastname  "NULL"
    string role "NOT NULL; enum: admin|customer"
    boolean is_verified "NOT NULL; default=false"
    datetime created_at "NOT NULL; default=now()"
    datetime updated_at "NOT NULL; default=now()"
  }

  admin_invite {
    string id PK "NOT NULL"
    string invited_by FK "NOT NULL -> user.id"
    string invitee_email "NOT NULL"
    datetime expires_at "NOT NULL"
    string status "NOT NULL; enum: pending|accepted|revoked|expired"
    datetime used_at "NULL"
    datetime created_at "NOT NULL; default=now()"
  }

  otp_token {
    string id PK "NOT NULL"
    string user_id FK "NOT NULL -> user.id"
    string token_hash "NOT NULL (argon2)"
    datetime created_at "NOT NULL; default=now()"
    datetime used_at "NULL"
    int attempts "NOT NULL; default=0"
    datetime expires_at "NOT NULL"
  }

  refresh_token {
    string id PK "NOT NULL"
    string user_id FK "NOT NULL -> user.id"
    string client_id "NOT NULL"
    string token_hash "NOT NULL (argon2)"
    datetime issued_at "NOT NULL; default=now()"
    datetime last_used_at "NOT NULL; default=now()"
    datetime expires_at "NOT NULL"
    boolean is_revoked "NOT NULL; default=false"
    string revoked_reason "NULL"
    string family_id "NOT NULL"
  }

  station {
    string id PK "NOT NULL"
    string name "NOT NULL"
    datetime created_at "NOT NULL; default=now()"
    datetime updated_at "NOT NULL; default=now()"
  }

  category {
    string id PK "NOT NULL"
    string name "NOT NULL"
    boolean is_active "NOT NULL; default=true"
    datetime created_at "NOT NULL; default=now()"
    datetime updated_at "NOT NULL; default=now()"
  }

  product {
    string id PK "NOT NULL"
    string category_id FK "NOT NULL -> category.id"
    string type "NOT NULL; enum: simple|menu"
    string name "NOT NULL"
    string image "NULL"
    int price_cents "NOT NULL; >= 0"
    boolean is_active "NOT NULL; default=true"
    datetime created_at "NOT NULL; default=now()"
    datetime updated_at "NOT NULL; default=now()"
  }

  menu_slot {
    string id PK "NOT NULL"
    string product_id FK "NOT NULL -> product.id"
    string name "NOT NULL"
    int sequence "NOT NULL"
  }

  menu_slot_item {
    string id PK "NOT NULL"
    string menu_slot_id FK "NOT NULL -> menu_slot.id"
    string product_id FK "NOT NULL -> product.id"
  }

  station_product {
    string id PK "NOT NULL"
    string station_id FK "NOT NULL -> station.id"
    string product_id FK "NOT NULL -> product.id"
  }

  order {
    string id PK "NOT NULL"
    string customer_id FK "NULL -> user.id"
    string contact_email "NULL (snapshot)"
    int total_cents "NOT NULL; >= 0"
    string status "NOT NULL; enum: pending|paid|cancelled|refunded"
    datetime created_at "NOT NULL; default=now()"
    datetime updated_at "NOT NULL; default=now()"
  }

  order_item {
    string id PK "NOT NULL"
    string order_id FK "NOT NULL -> order.id"
    string product_id FK "NOT NULL -> product.id"
    string title "NOT NULL (snapshot)"
    int quantity "NOT NULL; > 0"

    int price_per_unit_cents "NOT NULL; >= 0"

    string parent_item_id FK "NULL -> order_item.id"
    string menu_slot_id  FK "NULL -> menu_slot.id"
    string menu_slot_name "NULL (snapshot)"

    boolean is_redeemed "NOT NULL; default=false"
    datetime redeemed_at "NULL"
  }

  inventory_ledger {
    string id PK "NOT NULL"
    string product_id FK "NOT NULL -> product.id"
    int delta "NOT NULL; negative=sale, positive=restock/refund"
    string reason "NOT NULL; enum: opening_balance|sale|refund|manual_adjust|correction"
    datetime created_at "NOT NULL; default=now()"
  }

  %% relationships
  user     ||--o{ admin_invite    : "invited_by"
  user     ||--o{ otp_token       : "has"
  user     ||--o{ refresh_token   : "has"
  user     ||--o{ order           : "customer"

  station  ||--o{ station_product : "can_redeem"

  category||--o{ product         : "categorizes"
  product  ||--o{ menu_slot       : "has_slots"
  menu_slot||--o{ menu_slot_item  : "allows"
  menu_slot_item }o--|| product   : "simple_options"
  product  ||--o{ station_product : "redeemable_at"
  product  ||--o{ order_item      : "sold_as"
  product  ||--o{ inventory_ledger : "stock_moves"

  order    ||--o{ order_item      : "includes"
  order_item ||--o{ order_item    : "bundle_children"
